--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#Data source 
 
+spring.datasource.url=jdbc:mysql://104.192.6.36:3306/bdgeneral?useSSL=false&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.username=general
+#spring.datasource.password=root
+spring.datasource.password=inco$01
