--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.url=jdbc:mysql://104.192.6.36:3306/bdgeneral?useSSL=false&auto
 spring.datasource.username=general
 #spring.datasource.password=root
 spring.datasource.password=inco$01
+
+server.port=8084
+
+
+sistemaglobal.app.jwtSecret=ctrlZeusSecretKey
+sistemaglobal.app.jwtExpirationMs=86400000
+
+logging.level.org.springframework.mail=DEBUG
