--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 #Data source 
 
-spring.datasource.url=jdbc:mysql://104.192.6.36:3306/bdgeneral?useSSL=false&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-spring.datasource.username=general
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kanban_db?useSSL=false&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
 #spring.datasource.password=root
-spring.datasource.password=inco$01
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto =  none
+
 
 server.port=8084
 
