--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Data source 
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kanban_db?useSSL=false&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/kanban_db?useSSL=false&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.password=root
@@ -11,6 +11,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto =  none
+
+#[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
+spring.jpa.show-sql = true
 
 
 server.port=8084
