--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,34 @@ spring.jpa.hibernate.ddl-auto =  none
 #[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
 
-
+#port 
 server.port=8084
 
+#sistemaglobal.app.pathMicroServ=http://localhost:8084
+sistemaglobal.app.pathMicroServ=http://localhost:8084
 
 sistemaglobal.app.jwtSecret=ctrlZeusSecretKey
 sistemaglobal.app.jwtExpirationMs=86400000
 
 logging.level.org.springframework.mail=DEBUG
+
+
+#SMTP de GMAIL
+
+logging.level.org.springframework.mail=DEBUG
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nezattech@gmail.com
+spring.mail.password=AdminNeza1
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.banner.location=classpath:banner.txt
